[RED] Added tests to make changes to Balance service