@@ -1,12 +1,12 @@
 package id.ac.ui.cs.advprog.heymartorder.service;
 
 import id.ac.ui.cs.advprog.heymartorder.model.SupermarketBalance;
+import id.ac.ui.cs.advprog.heymartorder.repository.SupermarketBalanceRepository;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
-import id.ac.ui.cs.advprog.heymartorder.repository.SupermarketBalanceRepository;
 import org.mockito.junit.jupiter.MockitoExtension;
 
 import java.math.BigDecimal;
@@ -28,10 +28,15 @@ public class SupermarketBalanceServiceImplTest {
     @Mock
     private SupermarketBalanceRepository supermarketBalanceRepository;
 
-    List<SupermarketBalance> supermarketBalancesList = new ArrayList<>();
+    @Mock
+    private SupermarketBalanceStrategy supermarketBalanceStrategy;
+
+    private List<SupermarketBalance> supermarketBalancesList;
 
     @BeforeEach
     void setUp() {
+        supermarketBalancesList = new ArrayList<>();
+
         SupermarketBalance supermarketBalance1 = SupermarketBalance.builder()
                 .id(1L)
                 .supermarketId(1L)
@@ -41,20 +46,21 @@ public class SupermarketBalanceServiceImplTest {
         SupermarketBalance supermarketBalance2 = SupermarketBalance.builder()
                 .id(2L)
                 .supermarketId(2L)
-                .amount(BigDecimal.valueOf(500000))
+                .amount(BigDecimal.valueOf(50000))
                 .build();
 
         supermarketBalancesList.add(supermarketBalance1);
         supermarketBalancesList.add(supermarketBalance2);
     }
 
-
     @Test
     void testCreateSupermarketBalanceValid() {
-        when(supermarketBalanceRepository.save(any())).thenReturn(supermarketBalancesList.getFirst());
-        when(supermarketBalanceRepository.findById(supermarketBalancesList.getFirst().getId()))
-                .thenReturn(Optional.of(supermarketBalancesList.getFirst()));
-        SupermarketBalance supermarketBalance = supermarketBalanceService.createSupermarketBalance(supermarketBalancesList.getFirst().getId());
+        when(supermarketBalanceStrategy.createBalance(supermarketBalancesList.getFirst().getSupermarketId()))
+                .thenReturn(supermarketBalancesList.getFirst());
+        when(supermarketBalanceStrategy.findBalanceById(supermarketBalancesList.getFirst().getId()))
+                .thenReturn(supermarketBalancesList.getFirst());
+
+        SupermarketBalance supermarketBalance = supermarketBalanceService.createSupermarketBalance(supermarketBalancesList.get(0).getSupermarketId());
 
         assertEquals(supermarketBalance.getId(),
                 supermarketBalanceService.findSupermarketBalanceById(supermarketBalance.getId()).getId());
@@ -67,15 +73,14 @@ public class SupermarketBalanceServiceImplTest {
 
     @Test
     void testDeleteSupermarketBalanceValid() {
-        when(supermarketBalanceRepository.findById(supermarketBalancesList.getFirst().getId()))
-                .thenReturn(Optional.of(supermarketBalancesList.getFirst()));
-
         supermarketBalanceService.deleteSupermarketBalance(supermarketBalancesList.getFirst().getId());
     }
 
     @Test
     void testDeleteSupermarketBalanceNotValid() {
-        assertThrows(NoSuchElementException.class, () -> supermarketBalanceService.deleteSupermarketBalance(-1L));
+        when(supermarketBalanceService.deleteSupermarketBalance(3L)).thenThrow(new NoSuchElementException());
+        assertThrows(NoSuchElementException.class, () -> supermarketBalanceService.deleteSupermarketBalance(3L));
+        when(supermarketBalanceService.deleteSupermarketBalance(null)).thenThrow(new IllegalArgumentException());
         assertThrows(IllegalArgumentException.class, () -> supermarketBalanceService.deleteSupermarketBalance(null));
     }
 }
